# gsoc-2022

./: CMakeLists.txt  main.cpp
lib/include/: IdenticallyColored.h
lib/src/: IdenticallyColored.cpp
test-data/: my_mesh.ply  test_mesh.ply
